Fix gap between style buttons and do not display html code of liberty style at beginning

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -374,7 +374,7 @@ body{
   color: #3F9A6C;
 }
 
-#basic, #streets, #dark, #light {
+#basic, #liberty {
   display: none;
 }
 
