--- a/_sass/_map.scss
+++ b/_sass/_map.scss
@@ -9,7 +9,7 @@
 }
 
 .map-button {
-  width: 33%;
+  width: 33.33%;
   height: 50px;
   background-color: #44A886;
   color: white;
